fix: custom cursor visibility

--- a/src/assets/styles/components/cursor.css
+++ b/src/assets/styles/components/cursor.css
@@ -8,7 +8,7 @@
     background-repeat: no-repeat;
     background-position: center;
     z-index: 10000;
-    border: 1px solid var(--white);
+    outline: 1px solid var(--white);
     border-radius: 32px;
     transition: width 125ms, height 125ms, border-radius 125ms;
     mix-blend-mode: difference;
